# gpu-stoch-sim

./: .gitignore  Makefile.txt  README.md  euler-maruyama_demo.ipynb  pyproject.toml  setup.py
experiments/: benchmark_em.py  visualize_paths.py
src/sdegpu/: __init__.py  brownian.py  integrators.py  models.py
src/sdegpu/_cuda/: __init__.py  _ext.cp311-win_amd64.pyd  binding.cpp  em_kernel.cu
tests/: test_cuda_kernel.py  test_gbm_moments.py  test_sde_moments.py
